--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <p>Hello</p>
+    <div class="container">
+      <div class="can">
+        <div class="title"></div>
+        <div class="subtitle"></div>
+      </div>
+    </div>
   </body>
 </html>
