--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Strong Zero CSS Art</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
       <div class="can">
         <div class="title"></div>
+        <div class="can-bottom">
+          <div class="abv">
+            <div class="abv-percent"></div>
+            <div class="abv-label"></div>
+            <div class="abv-bottom"></div>
+          </div>
+        </div>
+        <div class="ribbon"></div>
         <div class="subtitle"></div>
       </div>
     </div>
