add suntory label

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <div class="abv">
             <div class="abv-label"></div>
           </div>
+          <div class="suntory">
+            <div class="suntory-bottom"></div>
+          </div>
         </div>
         <div class="ribbon"></div>
         <div class="subtitle"></div>
