--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
           <div class="suntory">
             <div class="suntory-bottom"></div>
           </div>
+          <div class="bottom-circle"></div>
+          <div class="bottom-text">
+            <div class="bottom-text-left"></div>
+            <div class="bottom-text-right"></div>
+          </div>
         </div>
         <div class="ribbon"></div>
         <div class="subtitle"></div>
