finish double lemon, tapers, and tweaking

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <body>
     <div class="container">
       <div class="can">
+        <div class="can-fill"></div>
+        <div class="lemons">
+          <div class="lemon-right"></div>
+          <div class="lemon-left">
+            <div class="lemon-left-lines">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
         <div class="title"></div>
         <div class="can-bottom">
           <div class="abv">
